--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <br>
         <br>
         <select name="city">
-            <option value="Delhi">Delhi</option>
+            <option value="Delhi">Dilli</option>
             <option value="Dehradun">Dehradun</option>
             <option value="Gurgaon">Gurgaon</option>
         </select>
